--- a/Playground/1. Structure/xMvvm.Unity/Assets/_Tests/XamlVariant1/LocationsView.xaml
+++ b/Playground/1. Structure/xMvvm.Unity/Assets/_Tests/XamlVariant1/LocationsView.xaml
@@ -4,13 +4,15 @@
     ViewModelType="LocationsViewModel"        
     Prefab="LocationsView.prefab">  
  
-    <ListView ItemsSource="{x:Bind Locations}">
-        <ListView.ItemTemplate>
-            <DataTemplate 
-                Prefab="LocationItem.prefab" />
-                <Property Name="Title" Value="{x:Bind Title}" Path="Canvas/Panel/TitleLabel" Type="TMPro.TMP_Text" Member="text" /> 
-                <Property Name="Text" Value="{x:Bind Text}" Path="Canvas/Panel/TextLabel" Type="TMPro.TMP_Text" Member="text" /> 
-            </DataTemplate>
-        </ListView.ItemTemplate>
-    </ListView>  
+    <View.Elements>
+        <ListElement ItemsSource="{x:Bind Locations}">
+            <ListElement.ItemTemplate>
+                <DataTemplate 
+                    Prefab="LocationItem.prefab" />
+                    <Property Name="Title" Value="{x:Bind Title}" Path="Canvas/Panel/TitleLabel" Type="TMPro.TMP_Text" Member="text" /> 
+                    <Property Name="Text" Value="{x:Bind Text}" Path="Canvas/Panel/TextLabel" Type="TMPro.TMP_Text" Member="text" /> 
+                </DataTemplate>
+            </ListElement.ItemTemplate>
+        </ListElement>
+    </View.Elements>  
 </View>
