--- a/Playground/1. Structure/xMvvm.Unity/Assets/EtAlii/xMvvm/Editor/XamlVariant1/Templates/GeneratedCsTemplate.liquid
+++ b/Playground/1. Structure/xMvvm.Unity/Assets/EtAlii/xMvvm/Editor/XamlVariant1/Templates/GeneratedCsTemplate.liquid
@@ -18,19 +18,19 @@ namespace {{classNamespace}}
     public partial class {{className}} : {{variantNamespace}}.View<{{view.ViewModelType}}>  
     {
         // Resources.
-{% for resource in view.Resources.Items -%}
+{%- for resource in view.Resources.Items -%}
         private readonly {{resource.Type}} {{ resource.Key | PrivateMember }};
-{% endfor -%}
+{%- endfor -%}
         
         // Bindings.
-{% for binding in view.Bindings -%}
+{%- for binding in view.Bindings -%}
         private readonly Binding<{{binding.Type}}, {{view.ViewModelType}}> {{ binding.Name | PrivateMember }};
-{% endfor -%}
+{%- endfor -%}
 
         // Elements.
-{% for element in view.Elements -%}
+{%- for element in view.Elements -%}
         private readonly {{variantNamespace}}.Element {{ element.Name | PrivateMember }};
-{% endfor -%}
+{%- endfor -%}
          
         public {{className}}() : this(GameObject.Instantiate(Resources.Load("{{view.Prefab}}", typeof(GameObject))) as GameObject)
         {
@@ -39,19 +39,18 @@ namespace {{classNamespace}}
         public {{className}}(GameObject gameObject) : base(gameObject)
         {
             // Setup the resources.
-{% for resource in view.Resources.Items -%}
+{%- for resource in view.Resources.Items -%}
             {{ resource.Key | PrivateMember }} = new {{resource.Type}}();
-{% endfor -%}
+{%- endfor -%}
         
             // Wire the bindings.
-{% for binding in view.Bindings -%}{% case binding.BindingType -%}
-{% when "Property" %}            {{ binding.Name | PrivateMember }} = new PropertyBinding<{{binding.Type}}, {{view.ViewModelType}}>(this, "{{binding.Path}}", component => component.{{binding.Member}}, vm => vm.{{binding.Value.Name}}, BindingMode.{{binding.Value.Mode}});
-{% when "Event" %}            {{ binding.Name | PrivateMember }} = new EventBinding<{{binding.Type}}, {{view.ViewModelType}}>(this, "{{binding.Path}}", component => component.{{binding.Member}}, vm => vm.{{binding.Handler.Name}});
-{% endcase -%}{% endfor -%}                 
+{%- for binding in view.Bindings -%}
+{%- case binding.BindingType -%}{%- when "Property" %}            {{ binding.Name | PrivateMember }} = new PropertyBinding<{{binding.Type}}, {{view.ViewModelType}}>(this, "{{binding.Path}}", component => component.{{binding.Member}}, vm => vm.{{binding.Value.Name}}, BindingMode.{{binding.Value.Mode}});
+{%- when "Event" %}               {{ binding.Name | PrivateMember }} = new EventBinding<{{binding.Type}}, {{view.ViewModelType}}>(this, "{{binding.Path}}", component => component.{{binding.Member}}, vm => vm.{{binding.Handler.Name}});{%- endcase -%}{%- endfor -%}                 
             // Setup the child elements.
-{% for element in view.Elements -%}
-            //{{ element.Name | PrivateMember }} = { % include "ElementConstruct" % }
-{% endfor -%}             
+{%- for childElement in view.Elements -%}
+            {{ childElement.Name | PrivateMember }} = {% include 'ElementConstruct' with childElement %};
+{%- endfor -%}             
             // And initialize.
             Initialize();   
         }
