Small template stuff before activation of the T4 templates

--- a/Playground/1. Structure/xMvvm.Unity/Assets/EtAlii/xMvvm/Editor/XamlVariant1/Templates/_ElementConstruct.liquid
+++ b/Playground/1. Structure/xMvvm.Unity/Assets/EtAlii/xMvvm/Editor/XamlVariant1/Templates/_ElementConstruct.liquid
@@ -1,10 +1,11 @@
 ﻿new {{variantNamespace}}.Element(gameObject, this, "{{ElementConstruct.Name}}")  
-{%- capture elementExpression -%}{
+{
     Elements = new {{variantNamespace}}.Element[]
     {
+    {%- Indent false -%}
     {% for childElement in ElementConstruct.Elements -%}
     {% include 'ElementConstruct' with childElement %}{% if forloop.last == false %},{% endif %}
     {% endfor -%}             
+    {%- endIndent -%}    
     }
-}{%- endcapture %}
-{{elementExpression | Indent }}{% comment %}Indent:ElementConstruct.Indent {%endcomment%}
+}
