--- a/Playground/1. Structure/xMvvm.Unity/Assets/EtAlii/xMvvm/Editor/XamlVariant1/Templates/_Old/_ElementConstruct.liquid
+++ b/Playground/1. Structure/xMvvm.Unity/Assets/EtAlii/xMvvm/Editor/XamlVariant1/Templates/_Old/_ElementConstruct.liquid
@@ -1,4 +1,4 @@
-﻿new {{variantNamespace}}.Element(gameObject, this, "{{ElementConstruct.Name}}")  
+﻿﻿new {{variantNamespace}}.Element(gameObject, this, "{{ElementConstruct.Name}}")  
 {
     Elements = new {{variantNamespace}}.Element[]
     {
